# kappastream

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
packaging/aur/: .gitignore  PKGBUILD  PKGBUILD-bin  README.md  build-release-tarball.sh  install.sh
packaging/aur/submit/kappastream-bin/: .SRCINFO  .gitignore  PKGBUILD  README.md
packaging/aur/submit/kappastream-git/: .SRCINFO  .gitignore  PKGBUILD  (+1 more)
packaging/debian/: .gitignore  Dockerfile  README.md  build.sh  control.in  postinst  postrm
packaging/fedora/: .gitignore  Dockerfile  README.md  build.sh  kappastream.spec.in
packaging/shared/: README.md  dev.kappy.kappastream.metainfo.xml  kappastream.desktop  kappastream.sh
scripts/: check-versions.sh  measure-appimage-glibc.sh
src/: App.svelte  PipWindow.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compat.rs  decapi.rs  env_spawn.rs  export.rs  gql.rs  lib.rs  main.rs  opener.rs  player.rs  resolve.rs  tray.rs  vod_proxy.rs
src/lib/: BrowseView.svelte  ChannelContent.svelte  NotifyMenu.svelte  PlayerControls.svelte  SearchBox.svelte  Settings.svelte  Sidebar.svelte  browse-reveal.test.ts  browse-reveal.ts  emote.css  emotes.test.ts  emotes.ts  favorites.svelte.ts  favorites.test.ts  gql.test.ts  gql.ts  hls-config.test.ts  hls-config.ts  irc.test.ts  irc.ts  notifications.svelte.ts  pip-controller.svelte.ts  settings.svelte.ts  settings.test.ts  tooltip.svelte.ts  tooltip.ts
