[package]
name = "kappastream"
version = "0.2.2"
description = "A lightweight, anonymous Twitch viewer (live stream, chat, favorites) shipped as a Tauri AppImage for Linux"
authors = ["kappy <kappy777@proton.me>"]
license = "GPL-3.0-only"
repository = "https://github.com/kappy7777/kappastream"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["process", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
rfd = "0.15"
url = "2"
# DevTools are enabled by default in debug builds (`tauri dev`). The `devtools`
# Cargo feature is intentionally NOT enabled so production/release builds do
# not ship the web inspector. See tauri.conf.json window `devtools` field.
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2.3.3"
# Single-instance guard: a second launch (e.g. clicking the dock/AppImage
# while the window is hidden to the tray) surfaces the existing window and
# exits the new process instead of starting a duplicate. Desktop-only.
tauri-plugin-single-instance = "2"

[dev-dependencies]
# Used in resolve.rs tests to set/unset env vars without mutating the global
# process environment (which would race under `cargo test`'s parallel runner).
temp-env = "0.3"
